# canbus-outpost

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  FreeRTOSConfig.h  README.md  canbus-outpost.c  release-please-config.json
.github/workflows/: release-please.yml
firmware/canbus-outpost/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  canbus-outpost.c
firmware/canbus-outpost/src/: cdi_data.c  cdi_data.h  lcc.c  lcc.h  lcc_defs.h  lcc_interface.c  lcc_interface.h  nv_storage.c  nv_storage.h  railcom.c  railcom_uart.pio  servo.c  servo.h
firmware/canbus-outpost/src/OpenLcbCLib/src/drivers/canbus/: CMakeLists.txt  alias_mapping_listener_Test.cxx  alias_mappings.c  alias_mappings_Test.cxx  can_buffer_fifo.c  can_buffer_fifo.h  can_buffer_fifo_Test.cxx  can_buffer_store.c  can_buffer_store_Test.cxx  can_login_message_handler_Test.cxx  can_login_statemachine_Test.cxx  can_main_statemachine_Test.cxx  can_multinode_e2e_Test.cxx  can_rx_message_handler_Test.cxx  can_rx_statemachine_Test.cxx  can_tx_message_handler_Test.cxx  can_tx_statemachine_Test.cxx  can_utilities_Test.cxx
firmware/canbus-outpost/src/OpenLcbCLib/src/openlcb/: CMakeLists.txt  openlcb_application_Test.cxx  openlcb_application_broadcast_time_Test.cxx  openlcb_application_train.c  openlcb_application_train_Test.cxx  openlcb_bootloader_Test.cxx  openlcb_broadcast_time_compile_Test.cxx  openlcb_buffer_fifo.h  openlcb_buffer_fifo_Test.cxx  openlcb_buffer_list_Test.cxx  openlcb_buffer_store_Test.cxx  openlcb_config.c  openlcb_config.h  openlcb_config_Test.cxx  openlcb_datagrams_only_compile_Test.cxx  openlcb_events_only_compile_Test.cxx  openlcb_float16.c  openlcb_float16_Test.cxx  openlcb_gridconnect_Test.cxx  openlcb_login_statemachine_Test.cxx  openlcb_login_statemachine_handler_Test.cxx  openlcb_main_statemachine.h  openlcb_main_statemachine_Test.cxx  openlcb_memory_config_compile_Test.cxx  openlcb_minimal_compile_Test.cxx  openlcb_multinode_e2e_Test.cxx  openlcb_node_Test.cxx  openlcb_train_compile_Test.cxx  openlcb_utilities.h  openlcb_utilities_Test.cxx  protocol_broadcast_time_handler_Test.cxx  protocol_config_mem_operations_handler_Test.cxx  protocol_config_mem_read_handler_Test.cxx  protocol_config_mem_write_handler.c  protocol_config_mem_write_handler_Test.cxx  protocol_datagram_handler_Test.cxx  protocol_event_transport_Test.cxx  protocol_message_network.c  protocol_message_network_Test.cxx  protocol_snip_Test.cxx  (+3 more)
firmware/canbus-outpost/src/OpenLcbCLib/src/utilities/: CMakeLists.txt  mustangpeak_endian_helper_Test.cxx  mustangpeak_string_helper_Test.cxx
firmware/canbus-outpost/src/OpenLcbCLib/src/utilities_pc/: CMakeLists.txt  threadsafe_stringlist_Test.cxx
firmware/canbus-outpost/src/OpenLcbCLib/test/: .gitignore  CMakeLists.txt  Makefile  README.md  check_symbol_leakage.sh
firmware/canbus-outpost/src/OpenLcbCLib/test/compliance_node/ComplianceTestNode/: main.c  openlcb_user_config.c  openlcb_user_config.h  protocol_modes.c  protocol_modes.h
firmware/canbus-outpost/src/OpenLcbCLib/test/compliance_node/ComplianceTestNode.xcodeproj/: project.pbxproj
firmware/canbus-outpost/src/OpenLcbCLib/test/compliance_node/ComplianceTestNode.xcodeproj/xcuserdata/jimkueneman.xcuserdatad/xcschemes/: xcschememanagement.plist
firmware/canbus-outpost/src/OpenLcbCLib/test/compliance_node/ComplianceTestNode/application_callbacks/: callbacks_broadcast_time.c  callbacks_broadcast_time.h  callbacks_can.c  callbacks_can.h  callbacks_config_mem.c  callbacks_config_mem.h  callbacks_events.c  callbacks_events.h  callbacks_olcb.c  callbacks_olcb.h  callbacks_train.c  callbacks_train.h
firmware/canbus-outpost/src/OpenLcbCLib/test/compliance_node/ComplianceTestNode/application_drivers/: osx_can_drivers.c  osx_can_drivers.h  osx_drivers.c  osx_drivers.h
firmware/canbus-outpost/src/OpenLcbCLib/test/compliance_node/ComplianceTestNode/openlcb_c_lib/: drivers  openlcb  utilities  utilities_pc
firmware/canbus-outpost/src/OpenLcbCLib/test/olcbchecker_bridge/: README.md  bridge_server.py  run_olcbchecker.sh  run_tests.py
firmware/canbus-outpost/src/OpenLcbCLib/test/user_config/bootloader/: openlcb_user_config.h
firmware/canbus-outpost/src/OpenLcbCLib/test/user_config/broadcast_time/: openlcb_user_config.h
firmware/canbus-outpost/src/OpenLcbCLib/test/user_config/datagrams_only/: openlcb_user_config.h
firmware/canbus-outpost/src/OpenLcbCLib/test/user_config/events_only/: openlcb_user_config.h
firmware/canbus-outpost/src/OpenLcbCLib/test/user_config/memory_config/: openlcb_user_config.h
firmware/canbus-outpost/src/OpenLcbCLib/test/user_config/minimal/: openlcb_user_config.h
firmware/canbus-outpost/src/OpenLcbCLib/test/user_config/train/: openlcb_user_config.h
firmware/canbus-outpost/src/OpenLcbCLib/test/user_config/typical/: openlcb_user_config.c  openlcb_user_config.h
hardware/: footprint.sh
hardware/canbus-outpost/: Library.kicad_sym  canbus-outpost.kicad_pcb  canbus-outpost.kicad_pro  canbus-outpost.kicad_sch
hardware/canbus-outpost/Library.pretty/: BarrelJack_Wuerth_694106106102_2.0x5.5mm.kicad_mod  CP_Elec_6.3x7.7.kicad_mod  C_0402_1005Metric.kicad_mod  C_0402_1005Metric_small_pads.kicad_mod  C_0603_1608Metric.kicad_mod  C_0805_2012Metric.kicad_mod  Crystal_SMD_3225-4Pin_3.2x2.5mm.kicad_mod  D_SMA.kicad_mod  Fuse_2920_7451Metric.kicad_mod  JST_XH_S2B-XH-A_1x02_P2.50mm_Horizontal.kicad_mod  LED_0603_1608Metric.kicad_mod  L_Changjiang_FXL0630.kicad_mod  L_Sunlord_SWPA6045S.kicad_mod  L_pol_2016.kicad_mod  PhoenixContact_MC_1,5_2-G-3.5_1x02_P3.50mm_Horizontal.kicad_mod  PinHeader_1x03_P2.54mm_Vertical.kicad_mod  PinHeader_1x04_P2.54mm_Vertical.kicad_mod  QFN-60-1EP_7x7mm_P0.4mm_EP3.4x3.4mm.kicad_mod  RJ45-TH_R-RJ45R08P-A004.kicad_mod  RJ45_Amphenol_54602-x08_Horizontal.kicad_mod  R_0402_1005Metric.kicad_mod  R_0603_1608Metric.kicad_mod  (+9 more)
src/: board.h  cdi_data.c  cdi_data.h  gridconnect.c  gridconnect.h  identify_led.c  identify_led.h  lcc.c  lcc.h  lcc_defs.h  lcc_memconfig.c  lcc_memconfig.h  nv_storage.c  railcom.h  railcom_sample.pio  servo.c  servo.h
src/util/: dbg.c  dbg.h
(+910 files in other folders)
